[fix]:vueRouter 路由功能完善

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,9 +1,9 @@
 
 VITE_BASE_URL=/
 
-VITE_APP_TITLE=SoybeanAdmin
+VITE_APP_TITLE=DataFlex
 
-VITE_APP_DESC=SoybeanAdmin is a fresh and elegant admin template
+VITE_APP_DESC=DataFlex Admin
 
 VITE_ICON_PREFIX=icon
 
@@ -12,7 +12,7 @@ VITE_ICON_PREFIX=icon
 VITE_ICON_LOCAL_PREFIX=icon-local
 
 # 路由模式: static(静态) ｜ dynamic(动态)
-VITE_AUTH_ROUTE_MODE=dynamic
+VITE_AUTH_ROUTE_MODE=static
 
 # 静态身份验证路由主页
 VITE_ROUTE_HOME=home
@@ -24,6 +24,7 @@ VITE_MENU_ICON=application-menu
 VITE_HTTP_PROXY=Y
 
 # vue-router 模式： 哈希 |历史 |记忆
+#  hash:  history :memory
 VITE_ROUTER_HISTORY_MODE=history
 
 # 后端服务成功码，收到代码时，请求成功
