--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -32,7 +32,7 @@
     "@eslint/js": "^9.24.0",
     "@iconify/utils": "^2.3.0",
     "@types/node": "^22.14.1",
-    "@unocss/preset-icons": "^66.1.2",
+    "@unocss/preset-uno": "^66.1.3",
     "@vitejs/plugin-vue": "^5.2.2",
     "@vue/tsconfig": "^0.7.0",
     "consola": "^3.4.2",
