--- a/admin/src/main/resources/application-mysql.yml
+++ b/admin/src/main/resources/application-mysql.yml
@@ -4,7 +4,7 @@ spring:
     username: root
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/data_flex?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=GMT%2b8
+    url: jdbc:mysql://127.0.0.1:3306/data_flex?useUnicode=true&useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=utf8&serverTimezone=GMT%2b8
     embedded-database-connection: none
 
 
