--- a/Frontend/.prettierrc
+++ b/Frontend/.prettierrc
@@ -1,7 +1,8 @@
 {
   "semi": true,
-  "trailingComma": "es5",
   "singleQuote": true,
-  "printWidth": 80,
-  "tabWidth": 2
+  "useTabs": false,
+  "tabWidth": 2,
+  "printWidth": 150,
+  "trailingComma": "none"
 }
