--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -31,10 +31,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
+    "@iconify-json/ic": "^1.2.2",
+    "@iconify-json/material-symbols": "^1.2.30",
     "@iconify/utils": "^2.3.0",
     "@types/node": "^22.14.1",
     "@unocss/preset-uno": "^66.1.3",
     "@vitejs/plugin-vue": "^5.2.2",
+    "@vitejs/plugin-vue-jsx": "^5.0.1",
     "@vue/tsconfig": "^0.7.0",
     "consola": "^3.4.2",
     "eslint": "^9.24.0",
